update of maps from Reuben

--- a/funding.html
+++ b/funding.html
@@ -29,11 +29,19 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title">WAAEH Dashboard</span>
+                            <span class="title"><u>WAAEH Dashboard</u></span>
                         </a>
                     </div>
                     <br>
                 </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="zeroproject.html">
+                            <span class="title">Zero Project</span>
+                        </a>
+                    </div>
+                </li>
+                <br>
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="trendsinhomelessness.html">
@@ -70,12 +78,12 @@
                             <span class="title">Addressing underlying drivers of homelessness in Western Australia</span>
                         </a>
                     </div>
-                    <br>
                 </li>
+                <br>
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="funding.html">
-                            <span class="title"><u>Funding of homelessness services</u></span>
+                            <span class="title">Funding of homelessness services</span>
                         </a>
                     </div>
                 </li>
@@ -114,7 +122,7 @@
                 </li>
                 <br>
                 <li>
-                     <div class="collapsible-menu-header">
+                    <div class="collapsible-menu-header">
                         <a href="authors.html">
                             <span class="title">Authors</span>
                         </a>
@@ -141,7 +149,7 @@
     <div class="spacer"></div>
     <div class="clr"></div>
     <p>
-        On the basis of Report of Government Services data, the Western Australian Government expended $90.3 million on homelessness services and $645.3 million on social housing in 2020-21.
+        On the basis of Report of Government Services data, the Western Australian Government expended $840.2 million on social housing in 2021-22.
     </p><br>
     <p>
         The 2021-22 WA Government budget included $875 million social housing investment going forward, including a $750 million Social Housing Investment Fund, with $228 million for short-term projects to increase social housing and $522 million to deliver 3,300 new social homes from 2022-23.  As part of reforms to boost social housing availability in regional WA, 39 long-term vacant and unused Government Regional Officer Homes have been transferred to the public housing stock.  Regions include the Pilbara, South-West, Mid-West/Gascoyne, Kimberley, Wheatbelt, Great Southern and Peel.
@@ -150,13 +158,13 @@
         The significant Western Australian Government latest commitments on social housing and major historic new initiatives going forward for social housing over time will help to ease major gaps in the system by providing more avenues for transition from homelessness to permanent housing. Currently, however, there is a major gap between supply of social housing and need.
     </p><br>
     <p>
-        Total WA Government recurrent real expenditure on homelessness services has increased in real terms (2020-2021 dollars) from $80.6 million in 2016/17 to $90.3 million in 2020/21. Over this same time period, real expenditure per person has increased from $31.40 to $33.80 <b>(Figure 5.1)</b>. Total recurrent real expenditure on social housing has decreased from $1,017 million in 2016/17 to $645.3 million in 2020/21;real expenditure per person has decreased from $326.56 to $220.94 <b>(Figure 5.2)</b>. <b>Figure 5.3</b> provides estimates of real expenditure by the Western Australian Government on social housing and homelessness services between 2016-17 and 2020-2021.
-    </p><br>
+        Total WA Government recurrent real expenditure on homelessness services has increased in real terms (2021-2022 dollars) from $82.7.6 million in 2017/18 to $101.1 million in 2021/22. Over this same time period, real expenditure per person has increased from $32.0 to $36.6 <b>(Figure 5.1)</b>. Total recurrent real expenditure on social housing has decreased from $1,017 million in 2016/17 to $581 million in 2021/22;real expenditure per person has decreased from $326 to $210 <b>(Figure 5.2)</b>. <b>Figure 5.3</b> provides estimates of real expenditure by the Western Australian Government on social housing and homelessness services between 2016-17 and 2021-2022.
     <p>
-        Compared to 2016/17, real expenditure on social housing has decreased by 36.5% for Western Australia compared to a 18.93% increase nationally <b>(Figure 5.4)</b>. The national increase in real expenditure on social housing is heavily affected by a very large increase in spending in Victoria. Compared to 2016/17, real expenditure on homelessness services has increased by 12.0% for Western Australia compared to a 37.5% increase nationally <b>(Figure 5.5)</b>. The national increase in real expenditure on homelessness services is heavily affected by a very large increase in spending in Victoria. Australian Government NHHA allocations to Western Australia has remained stable from $168.7 million in 2018/19 to $171.3 million in 2020/21 <b>(Figure 5.6)</b>.
     </p><br>
     
-<div class='tableauPlaceholder' id='viz1658768148856' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3-Governmentexpenditure&#47;WAgovernmentexpenditure&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target3-Governmentexpenditure&#47;WAgovernmentexpenditure' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3-Governmentexpenditure&#47;WAgovernmentexpenditure&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1658768148856');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else { vizElement.style.width='100%';vizElement.style.height='900px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1695173612335' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_1_2&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig5_1_2&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_1_2&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695173612335');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1695173621266' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_2_2&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig5_2_2&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_2_2&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695173621266');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1695173628429' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_3_2&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Fig5_3_2&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;Fig5_3_2&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1695173628429');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
     <br><br>
     
         <img src="csi-uwa logo.png" width="310" height="90" align="right">
