--- a/livedexperience.html
+++ b/livedexperience.html
@@ -29,11 +29,19 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title">WAAEH Dashboard</span>
+                            <span class="title"><u>WAAEH Dashboard</u></span>
                         </a>
                     </div>
                     <br>
                 </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="zeroproject.html">
+                            <span class="title">Zero Project</span>
+                        </a>
+                    </div>
+                </li>
+                <br>
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="trendsinhomelessness.html">
@@ -70,8 +78,8 @@
                             <span class="title">Addressing underlying drivers of homelessness in Western Australia</span>
                         </a>
                     </div>
-                    <br>
                 </li>
+                <br>
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="funding.html">
@@ -83,7 +91,7 @@
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="livedexperience.html">
-                          <span class="title"><u>The lived experience voice</u></span>
+                            <span class="title">The lived experience voice</span>
                         </a>
                     </div>
                 </li>
@@ -114,7 +122,7 @@
                 </li>
                 <br>
                 <li>
-                     <div class="collapsible-menu-header">
+                    <div class="collapsible-menu-header">
                         <a href="authors.html">
                             <span class="title">Authors</span>
                         </a>
