--- a/zeroproject.html
+++ b/zeroproject.html
@@ -138,7 +138,7 @@
     <table class="header-table" style="border:1">
         <tr>
             <td style="width:70%; vertical-align:top;">
-                <h1>Western Australian Alliance to End Homelessness Dashboard</h1>
+                <h1>Zero Project</h1>
                 <br>
             </td>
             <td style="width:30%; vertical-align:top;">
@@ -149,49 +149,7 @@
     <!-- comment -->
     <div class="spacer"></div>
     <div class="clr"></div>
-    <p>The Western Australian Alliance to End Homelessness Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
-    </p><br>
-    <p>The WAAEH acknowledges the assistance of Western Australian homelessness agencies in preparing the Dashboard. The WAAEH wishes to acknowledge the funding to the WAEEH provided by the Sisters of St John of God Ministries without which the WAAEH Dashboard would not have been possible.
-    </p>
-    <br><br>
-        <p>In July 2018, the WAAEH published the <a href="https://www.endhomelessnesswa.com/strategy">Strategy to End Homelessness</a> (the Strategy). The Strategy articulates a 10-year plan to end homelessness in Western Australia, invoking a whole-of-society response. The Strategy comprises nine broad targets across the following areas: reducing and ending homelessness itself; preventing homelessness through addressing ‘structural’ and ‘individual’ drivers of homelessness; improving policy and practice within the service sector; and, improving measurement, accountability, and governance mechanisms. Those targets relating to reducing and preventing homelessness, which have been operationalised and for which data exists, form the backbone of the present version of the Dashboard. </p>
-        <center>
-            <table class="styled-table">
-                <thead>
-                <tr>
-                    <th align="center" colspan="2"><b>Ending Homelessness in Western Australia by 2028</b></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><i>Targets for responding to homelessness</i></td>
-                    <td><i>Targets for preventing homelessness</i></td>
-                </tr>
-                <tr>
-                    <td width="50%">
-                        <b>Target 1</b>: Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping.<br>
-                        <b>Target 2</b>: No individual or family in Western Australia will sleep rough or stay in supported accommodation for longer than five nights before moving into an affordable, safe, decent, permanent home with the support required to sustain it.<br>
-                        <b>Target 3</b>: The Western Australian rate of homelessness (including couch surfing and insecure tenure) will have been halved from its 2016 level.<br>
-                        <b>Target 5</b>: The current very large gap between the rate of Aboriginal homelessness and non-Aboriginal homelessness in Western Australia will be eliminated so that the rate of Aboriginal homelessness is no higher than the rate of non-Aboriginal homelessness.<br>
-                        <b>Target 6</b>: Those experiencing homelessness and those exiting homelessness with physical health, mental health, and alcohol and other drug use dependence needs will have their needs addressed. This will result in a halving of mortality rates among those who have experienced homelessness and a halving in public hospital costs one year on for those exiting homelessness.<br>
-                        <b>Target 7</b>: Those experiencing homelessness and those exiting homelessness will be supported to strengthen their economic, social, family and community connections leading to stronger well-being and quality of life outcomes. Employment among those experiencing homelessness will be significantly increased. Over half of those exiting homelessness will be employed within three years of moving into housing. Well-being and quality of life will equal those of the general population in the same timeframe.
-                    </td>
-                    <td width="50%">
-                        <b>Target 4</b>: The underlying causes that result in people becoming homeless have been met head-on, resulting in a reduction by more than half in the inflow of people and families into homelessness in any one year.<br>
-                        <b>Target 8</b>: A strong, collaborative and adaptive network of services and responses across the community services, health, mental health, justice, and education sectors will exist working collectively to address the underlying causes of homelessness and meeting the needs of those who become homeless.<br>
-                        <b>Target 9</b>: Measurement, accountability and governance mechanisms that are robust, transparent and open to external review will be operating, providing an on-going means for assessing progress in meeting the goals of Ending Homelessness in Western Australia in 10 years.<br>
-                    </td>
-                </tr>
-                </tbody>
-                <tfoot>
-                <tr>
-                    <td colspan="2">
-                        <p2>Source: WAAEH Strategy to End Homelessness (2018)</p2>
-                    </td>
-                </tr>
-                </tfoot>
-            </table>
-        </center>
+	<iframe title="Zero Project Final NL" width="1024" height="612" src="https://app.powerbi.com/view?r=eyJrIjoiNzYzNWYxZmYtM2NjMC00NzNjLThkNjQtNGRhMmE1NDdjNzE1IiwidCI6IjdhOTU0NzU2LTkxN2UtNGU5OS1iNDBmLWRlMjEyY2JmMTM0YSJ9" frameborder="0" allowFullScreen="true"></iframe>
     </div>
 
         <img src="csi-uwa logo.png" width="310" height="90" align="right">
