--- a/authors.html
+++ b/authors.html
@@ -29,11 +29,19 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title">WAAEH Dashboard</span>
+                            <span class="title"><u>WAAEH Dashboard</u></span>
                         </a>
                     </div>
                     <br>
                 </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="zeroproject.html">
+                            <span class="title">Zero Project</span>
+                        </a>
+                    </div>
+                </li>
+                <br>
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="trendsinhomelessness.html">
@@ -70,8 +78,8 @@
                             <span class="title">Addressing underlying drivers of homelessness in Western Australia</span>
                         </a>
                     </div>
-                    <br>
                 </li>
+                <br>
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="funding.html">
@@ -114,9 +122,9 @@
                 </li>
                 <br>
                 <li>
-                     <div class="collapsible-menu-header">
+                    <div class="collapsible-menu-header">
                         <a href="authors.html">
-                            <span class="title"><u>Authors</u></span>
+                            <span class="title">Authors</span>
                         </a>
                     </div>
                 </li>
