--- a/authors.html
+++ b/authors.html
@@ -179,6 +179,14 @@
             <a href="mailto:Michael.Kyron@uwa.edu.au">Michael.Kyron@uwa.edu.au</a>
         </td>
     </tr>
+	<tr>
+        <td>
+            Reuben Lester
+        </td>
+        <td>
+            <a href="mailto:Reuben.Lester@uwa.edu.au">Reuben.Lester@uwa.edu.au</a>
+        </td>
+    </tr>
     </tbody>
 </table>
     <br>
